# lib/db/src/schema/traits.ts
@@ -18,6 +18,7 @@ export const traitsTable = pgTable("traits", {
   description: text("description"),
   imageUrl: text("image_url"),
   mediaType: text("media_type").default("image"),
+  priceUsd: text("price_usd").notNull().default("0"),
   priceEth: text("price_eth").notNull(),
   priceWei: text("price_wei").notNull(),
   totalSupply: integer("total_supply").notNull(),
